--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 h1 {
-  background-color: var(--deepgreen);
+  background: linear-gradient(90deg, var(--deepgreen), var(--lightgreen), var(--deepgreen));
   color: var(--yellowgreen);
   text-align: center;
   padding: 1rem 0;
