--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ Yellow beige: #fcec9a	(252,236,154)
   --yellowbeige: #fcec9a;
 }
 
-html {
+/* html {
   font-size: 1.2rem;
-}
+} */
 
 body {
   min-height: 100vh;
@@ -73,6 +73,8 @@ li.current-page {
 figure img {
   display: block;
   margin: 2rem auto;
+  border: 2px solid black;
+  border-radius: 12px;
 }
 
 footer {
@@ -104,5 +106,12 @@ footer {
 } */
   
 /* Extra large devices (large laptops and desktops, 1370px and up) */
-/*@media only screen and (min-width: 1370px) {
-}*/
+@media only screen and (min-width: 1370px) {
+  html {
+    font-size: 1.2rem;
+  }
+
+  figure img {
+    width: 600px;
+  }
+}
